clusters/groups/on-prem/dev/in-cluster/overlays/istio-ingress/global-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: global-gateway
spec:
  selector:
    istio: gateway
  servers:
    - hosts:
        - argocd.k8scicd.dev
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: k8scicd-cert
        mode: SIMPLE
    - hosts:
        - argocd.k8scicd.dev
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
